// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pager renders the Pager correctly with the Mint Theme 1`] = `
.c12 {
  background: transparent;
  border: none;
  color: rgba(0,0,0,0.9);
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  font-size: 14px;
  outline: none;
  padding: 0;
  width: 30px;
}

.c12:-webkit-autofill {
  -webkit-box-shadow: 0 0 0px 1000px #fff inset;
  -webkit-box-border: none;
}

.c12::-webkit-input-placeholder {
  color: rgba(0,0,0,0.3);
}

.c12::-moz-placeholder {
  color: rgba(0,0,0,0.3);
}

.c12:-ms-input-placeholder {
  color: rgba(0,0,0,0.3);
}

.c12::placeholder {
  color: rgba(0,0,0,0.3);
}

.c12:invalid,
.c12:required {
  box-shadow: none;
}

.c21 {
  color: rgba(0,0,0,0.9);
  display: block;
  font-weight: 600;
}

.c20 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-bottom: 8px;
}

.c8 {
  -webkit-flex: 0 0 70%;
  -ms-flex: 0 0 70%;
  flex: 0 0 70%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
}

.c10 {
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  background: #fff;
  border: 1px solid #668592;
  box-sizing: border-box;
  cursor: text;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  width: 100%;
  margin: 0;
  min-height: 40px;
  padding-left: 11px;
  padding-right: 11px;
}

.c10 .c11:-webkit-autofill {
  margin-top: 2px;
}

.c10 input::-ms-clear {
  display: none;
}

.c10 input::-webkit-contacts-auto-fill-button {
  display: none !important;
}

.c14 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-right: -11px;
  margin-left: -11px;
  width: 40px;
}

.c3 .c11 {
  cursor: pointer;
  color: transparent;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  text-shadow: 0 0 0 rgba(0,0,0,0.9);
  padding-left: 11px;
}

.c3 .c11::-webkit-input-placeholder {
  text-shadow: 0 0 0 rgba(0,0,0,0.3);
}

.c3 .c11::-moz-placeholder {
  text-shadow: 0 0 0 rgba(0,0,0,0.3);
}

.c3 .c11:-ms-input-placeholder {
  text-shadow: 0 0 0 rgba(0,0,0,0.3);
}

.c3 .c11::placeholder {
  text-shadow: 0 0 0 rgba(0,0,0,0.3);
}

.c3 .c9 {
  cursor: pointer;
  padding-left: 0;
  padding-right: 0;
}

.c3 .c13 {
  margin-right: 0;
}

.c15 {
  display: inline-block;
  position: relative;
  color: rgba(0,0,0,0.65);
  background-color: transparent;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 24px;
  width: 24px;
}

.c15:hover {
  color: rgba(0,0,0,0.90);
  background-color: transparent;
}

.c15::before {
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-family: CarbonIcons;
  content: "\\e910";
  font-size: 16px;
  font-style: normal;
  font-weight: normal;
  line-height: 16px;
  vertical-align: middle;
  display: block;
}

.c6 + .c5 {
  margin-top: 16px;
}

.c7 {
  display: block;
}

.c4 {
  height: 26px;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  padding: 0px 24px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-top-width: 0;
  font-size: 13px;
  height: 39px;
  max-height: 39px;
  border-width: 1px 1px 1px 1px;
  border-style: none solid solid solid;
  border-color: #CCD6DB;
  background-color: #FAFBFB;
  border-top: none;
}

.c0 .carbon-input-icon {
  border: none;
  background: none;
}

.c0 .carbon-input-icon:hover {
  background: none;
  color: #000000;
}

.c0 .common-input__field:focus-within {
  outline: 3px solid #FFB500;
}

.c0 .common-input__input {
  border: 1px solid #668592;
}

.c0 .common-input__input:active,
.c0 .common-input__input:hover,
.c0 .common-input__input:focus {
  border: 1px solid #668592;
}

.c0 .common-input__input:focus {
  border: 1px solid #668592;
  color: #000000;
}

.c0 .common-input__input:focus ~ label .carbon-input-icon,
.c0 .common-input__input:focus ~ label .carbon-input-icon:hover {
  border: none;
  background: none;
  color: #000000;
}

.c0 .common-input__input:hover ~ label .carbon-input-icon {
  border: none;
  background: none;
  color: #000000;
}

.c0 .common-input__input:hover ~ label .carbon-input-icon:hover {
  border: none;
  background: none;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1 1 30%;
  -ms-flex: 1 1 30%;
  flex: 1 1 30%;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.c1 .c9 {
  width: 55px;
  height: 26px;
  min-height: 26px;
  min-width: 10px;
  margin: 0px 4px;
}

.c1 .c9 .c11 {
  font-size: 14px;
  padding-right: 0px;
  padding-left: 8px;
  height: 22px;
  width: 13px;
}

.c1 .c9 .c13 {
  margin-left: 0;
  width: 20px;
  height: 24px;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c16 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c16.c16 .c9 {
  padding: 0;
  margin: 8px 4px 0 4px;
  height: 26px;
  line-height: 26px;
  min-height: 24px;
}

.c16.c16 .c9 .c11 {
  text-align: center;
  height: 24px;
  padding: 0;
}

.c18 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 0 12px;
}

.c17 {
  padding: 0 10px;
  font-size: 13px;
  border-width: 0;
  background-color: transparent;
  cursor: pointer;
  margin-left: 7px;
  margin-right: 7px;
  color: rgba(0,0,0,0.90);
  color: rgba(0,0,0,0.3);
  cursor: not-allowed;
}

.c17:focus {
  outline: solid 3px #FFB500;
  padding: 5px 10px;
}

.c22 {
  padding: 0 10px;
  font-size: 13px;
  border-width: 0;
  background-color: transparent;
  cursor: pointer;
  margin-left: 7px;
  margin-right: 7px;
  color: rgba(0,0,0,0.90);
}

.c22:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
  padding: 5px 10px;
}

.c22:focus {
  outline: solid 3px #FFB500;
  padding: 5px 10px;
}

.c19 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  white-space: nowrap;
}

.c23 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1 1 30%;
  -ms-flex: 1 1 30%;
  flex: 1 1 30%;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

<div
  className="c0"
  data-component="pager"
>
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      <span>
        Show
      </span>
      <div
        aria-expanded={false}
        aria-haspopup="listbox"
        className="c3 c4"
        data-component="simple-select"
        data-element="page-select"
        size="medium"
      >
        <div
          className="c5 c6"
          data-element="page-select"
        >
          <div
            className="c7"
          >
            <div
              className="c8"
            >
              <div
                className="c9 c10"
                onMouseDown={[Function]}
                onMouseEnter={[Function]}
                onMouseLeave={[Function]}
                role="presentation"
                size="medium"
              >
                <input
                  aria-controls=""
                  aria-invalid={false}
                  autoComplete="off"
                  className="c11 c12"
                  data-element="input"
                  id="page-select"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  onMouseDown={[Function]}
                  placeholder="Please Select..."
                  size="medium"
                  type="select"
                  value="10"
                />
                <span
                  className="c13 c14"
                  onClick={[Function]}
                  onMouseDown={[Function]}
                  size="medium"
                >
                  <span
                    className="c15"
                    data-component="icon"
                    data-element="dropdown"
                    disabled={false}
                    fontSize="small"
                    type="dropdown"
                  />
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
      <span>
        items
      </span>
    </div>
  </div>
  <div
    className="c16"
  >
    <button
      className="c17"
      data-element="pager-link-first"
      disabled={true}
      onClick={[Function]}
      type="button"
    >
      First
    </button>
    <button
      className="c17"
      data-element="pager-link-previous"
      disabled={true}
      onClick={[Function]}
      type="button"
    >
      Previous
    </button>
    <div
      className="c18"
    >
      <span
        className="c19"
      >
        Page 
      </span>
      <div
        className="c20"
        width={30}
      >
        <label
          className="c21"
          data-element="label"
          htmlFor="Pager_guid-12345"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
        >
          <div
            className="c5 c6"
            data-element="current-page"
          >
            <div
              className="c7"
            >
              <div
                className="c8"
              >
                <div
                  className="c9 c10"
                  onMouseDown={[Function]}
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                  role="presentation"
                  size="medium"
                >
                  <input
                    aria-invalid={false}
                    className="c11 c12"
                    data-element="input"
                    id="Pager_guid-12345"
                    name="guid-12345"
                    onBlur={[Function]}
                    onChange={[Function]}
                    onClick={[Function]}
                    onFocus={[Function]}
                    onKeyDown={[Function]}
                    onKeyUp={[Function]}
                    size="medium"
                    type="text"
                    value="1"
                  />
                </div>
              </div>
            </div>
          </div>
        </label>
      </div>
      <span
        className="c19"
      >
         of 
        10
      </span>
    </div>
    <button
      className="c22"
      data-element="pager-link-next"
      disabled={false}
      onClick={[Function]}
      type="button"
    >
      Next
    </button>
    <button
      className="c22"
      data-element="pager-link-last"
      disabled={false}
      onClick={[Function]}
      type="button"
    >
      Last
    </button>
  </div>
  <div
    className="c23"
  >
    100
     
    items
  </div>
</div>
`;

exports[`Pager renders the Pager without pageSizeSelection 1`] = `
.c15 {
  background: transparent;
  border: none;
  color: rgba(0,0,0,0.9);
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  font-size: 14px;
  outline: none;
  padding: 0;
  width: 30px;
}

.c15:-webkit-autofill {
  -webkit-box-shadow: 0 0 0px 1000px #fff inset;
  -webkit-box-border: none;
}

.c15::-webkit-input-placeholder {
  color: rgba(0,0,0,0.3);
}

.c15::-moz-placeholder {
  color: rgba(0,0,0,0.3);
}

.c15:-ms-input-placeholder {
  color: rgba(0,0,0,0.3);
}

.c15::placeholder {
  color: rgba(0,0,0,0.3);
}

.c15:invalid,
.c15:required {
  box-shadow: none;
}

.c7 {
  color: rgba(0,0,0,0.9);
  display: block;
  font-weight: 600;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-bottom: 8px;
}

.c11 {
  -webkit-flex: 0 0 70%;
  -ms-flex: 0 0 70%;
  flex: 0 0 70%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
}

.c13 {
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  background: #fff;
  border: 1px solid #668592;
  box-sizing: border-box;
  cursor: text;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  width: 100%;
  margin: 0;
  min-height: 40px;
  padding-left: 11px;
  padding-right: 11px;
}

.c13 .c14:-webkit-autofill {
  margin-top: 2px;
}

.c13 input::-ms-clear {
  display: none;
}

.c13 input::-webkit-contacts-auto-fill-button {
  display: none !important;
}

.c17 .c14 {
  cursor: pointer;
  color: transparent;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  text-shadow: 0 0 0 rgba(0,0,0,0.9);
  padding-left: 11px;
}

.c17 .c14::-webkit-input-placeholder {
  text-shadow: 0 0 0 rgba(0,0,0,0.3);
}

.c17 .c14::-moz-placeholder {
  text-shadow: 0 0 0 rgba(0,0,0,0.3);
}

.c17 .c14:-ms-input-placeholder {
  text-shadow: 0 0 0 rgba(0,0,0,0.3);
}

.c17 .c14::placeholder {
  text-shadow: 0 0 0 rgba(0,0,0,0.3);
}

.c17 .c12 {
  cursor: pointer;
  padding-left: 0;
  padding-right: 0;
}

.c9 + .c8 {
  margin-top: 16px;
}

.c10 {
  display: block;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  padding: 0px 24px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-top-width: 0;
  font-size: 13px;
  height: 39px;
  max-height: 39px;
  border-width: 1px 1px 1px 1px;
  border-style: none solid solid solid;
  border-color: #CCD6DB;
  background-color: #FAFBFB;
  border-top: none;
}

.c0 .carbon-input-icon {
  border: none;
  background: none;
}

.c0 .carbon-input-icon:hover {
  background: none;
  color: #000000;
}

.c0 .common-input__field:focus-within {
  outline: 3px solid #FFB500;
}

.c0 .common-input__input {
  border: 1px solid #668592;
}

.c0 .common-input__input:active,
.c0 .common-input__input:hover,
.c0 .common-input__input:focus {
  border: 1px solid #668592;
}

.c0 .common-input__input:focus {
  border: 1px solid #668592;
  color: #000000;
}

.c0 .common-input__input:focus ~ label .carbon-input-icon,
.c0 .common-input__input:focus ~ label .carbon-input-icon:hover {
  border: none;
  background: none;
  color: #000000;
}

.c0 .common-input__input:hover ~ label .carbon-input-icon {
  border: none;
  background: none;
  color: #000000;
}

.c0 .common-input__input:hover ~ label .carbon-input-icon:hover {
  border: none;
  background: none;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1 1 30%;
  -ms-flex: 1 1 30%;
  flex: 1 1 30%;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.c1 .c12 {
  width: 55px;
  height: 26px;
  min-height: 26px;
  min-width: 10px;
  margin: 0px 4px;
}

.c1 .c12 .c14 {
  font-size: 14px;
  padding-right: 0px;
  padding-left: 8px;
  height: 22px;
  width: 13px;
}

.c1 .c12 .c18 {
  margin-left: 0;
  width: 20px;
  height: 24px;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c2.c2 .c12 {
  padding: 0;
  margin: 8px 4px 0 4px;
  height: 26px;
  line-height: 26px;
  min-height: 24px;
}

.c2.c2 .c12 .c14 {
  text-align: center;
  height: 24px;
  padding: 0;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 0 12px;
}

.c3 {
  padding: 0 10px;
  font-size: 13px;
  border-width: 0;
  background-color: transparent;
  cursor: pointer;
  margin-left: 7px;
  margin-right: 7px;
  color: rgba(0,0,0,0.90);
  color: rgba(0,0,0,0.3);
  cursor: not-allowed;
}

.c3:focus {
  outline: solid 3px #FFB500;
  padding: 5px 10px;
}

.c5 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  white-space: nowrap;
}

.c16 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1 1 30%;
  -ms-flex: 1 1 30%;
  flex: 1 1 30%;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

<div
  className="c0"
  data-component="pager"
>
  <div
    className="c1"
  />
  <div
    className="c2"
  >
    <button
      className="c3"
      data-element="pager-link-first"
      disabled={true}
      onClick={[Function]}
      type="button"
    >
      First
    </button>
    <button
      className="c3"
      data-element="pager-link-previous"
      disabled={true}
      onClick={[Function]}
      type="button"
    >
      Previous
    </button>
    <div
      className="c4"
    >
      <span
        className="c5"
      >
        Page 
      </span>
      <div
        className="c6"
        width={30}
      >
        <label
          className="c7"
          data-element="label"
          htmlFor="Pager_guid-12345"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
        >
          <div
            className="c8 c9"
            data-element="current-page"
          >
            <div
              className="c10"
            >
              <div
                className="c11"
              >
                <div
                  className="c12 c13"
                  onMouseDown={[Function]}
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                  role="presentation"
                  size="medium"
                >
                  <input
                    aria-invalid={false}
                    className="c14 c15"
                    data-element="input"
                    id="Pager_guid-12345"
                    name="guid-12345"
                    onBlur={[Function]}
                    onChange={[Function]}
                    onClick={[Function]}
                    onFocus={[Function]}
                    onKeyDown={[Function]}
                    onKeyUp={[Function]}
                    size="medium"
                    type="text"
                    value=""
                  />
                </div>
              </div>
            </div>
          </div>
        </label>
      </div>
      <span
        className="c5"
      >
         of 
        1
      </span>
    </div>
    <button
      className="c3"
      data-element="pager-link-next"
      disabled={true}
      onClick={[Function]}
      type="button"
    >
      Next
    </button>
    <button
      className="c3"
      data-element="pager-link-last"
      disabled={true}
      onClick={[Function]}
      type="button"
    >
      Last
    </button>
  </div>
  <div
    className="c16"
  >
    100
     
    items
  </div>
</div>
`;
